[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poktroll-clients"
version = "0.1.0"
description = "Python bindings for the Pocket Network protocol client library (libpoktroll-clients)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Bryan White", email = "bryanchriswhite@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "cffi>=1.15.0",
    "atomics>=1.0.0",
    "protobuf>=4.21.0"
]

[project.urls]
Homepage = "https://github.com/pokt-network/poktroll-clients-py"
Repository = "https://github.com/pokt-network/poktroll-clients-py.git"
Documentation = "https://github.com/pokt-network/poktroll-clients-py#readme"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[tool.hatch.build]
include = [
    "src/poktroll_clients/**/*.py",
    "src/poktroll_clients/**/*.pyi",
    "src/poktroll_clients/**/*.h",
    "src/poktroll_clients/**/*.pc.in"
]

[tool.hatch.build.targets.wheel]
packages = ["src/poktroll_clients"]